Changelog for CinemaVision

[- 1.0.10 -]

- fix: Bad default regular expressions for slides causing issues with extensions other than .jpg

[- 1.0.9 -]

- fix:     Trailers with source 'Directory' were not being filtered for video files only

[- 1.0.8 -]

- fix:     Various encoding errors when loading content

[- 1.0.7 -]

- fix:     Various encoding errors
- fix:     Fatal error when resolving a trailer's playable URL
- fix:     Error playing sequence when a feature has no rating
- fix:     Error when testing an action file when the abort action is not set

[- 1.0.6 -]

- fix:     Encoding errors when playing a sequence
- add:     Setting in Playback section: "Ignore Kodi playlist with only one item if there is a selection" (Default: Enabled)

[- 1.0.5 -]

- fix:     Errors when adding a new trailer module or loading a sequence where trailer scrapers have never been set

[- 1.0.4 -]

- add:     Ability to pass multiple movie IDs to the addon: movieid=<id>|<id>|<id>|...
- add:     Ability to pass nodialog to the addon to suppress the playlist editor dialog
- fix:     Error caused when when playing movies passed via movieid arg
- change:  Change script:// action to python:// (though script:// will still work)
- add:     Now shows a dialog on failure to write a sequence file
- fix:     Another error caused by non-ascii characters in genres
- fix:     Bug causing trailers from the CV Trailers folder not to work
- change:  'Content Folder' scraper for trailers name changed to 'CV Trailers Folder'

[- 1.0.3 -]

- fix:     Encoding errors caused by non-ascii characters in genres
- add:     Warning dialog when saving a sequence that does not contain a feature module

[- 1.0.2 -]

- change:  Improve logging and add a dialog for sequence loading errors
- fix:     Error when testing play/resume/abort actions when the action file is not set

[- 1.0.1 -]

- add:     Now disables GUI sounds when playing a sequence