@@ -3,6 +3,7 @@ Changelog for CinemaVision
 [- 1.0.10 -]
 
 - fix: Bad default regular expressions for slides causing issues with extensions other than .jpg
+- fix: On Windows, python and command actions were causing Kodi to minimize
 
 [- 1.0.9 -]
 
